--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -2,8 +2,7 @@
     width: 100%;
     text-align: right;
     font-size: 2rem;
-    color: rgb(255, 0, 0);
-    outline-color: #fafe20;
+    color: #fff897;
     margin-bottom: 50px;
     padding-left: 3%;
     padding-right: 3%;  
